@@ -15,6 +15,8 @@ Revision history for Perl module Math::Prime::Util
 
     - euler_phi and moebius with negative range inputs weren't consistent.
 
+    - split final test in PP cluster sieve.
+
 
 0.68 2017-10-19
 
